--- a/styles/scss/_nav.scss
+++ b/styles/scss/_nav.scss
@@ -1,8 +1,12 @@
 .nav{
     height: 75px;
+    width: 100vw;
     background-color: $white;
     display: flex;
     align-items: center;
+    position: fixed;
+    top: 0;
+    z-index: 999;
 
     &>.container{
         display: flex;
