--- a/styles/scss/_nav.scss
+++ b/styles/scss/_nav.scss
@@ -18,7 +18,10 @@
         color: $black;
         @include ModeratRegular;
         font-size: 1.5em;
-        text-transform: capitalize;
+        
+        &::first-letter{
+            text-transform: uppercase;
+        }
     }
     .home_link{
         @include ModeratBold;
@@ -39,6 +42,7 @@
         align-items: center;
     }
     li:nth-child(2){
+        position: relative;
         &::after{
             content: "";
             width: 24px;
@@ -57,5 +61,29 @@
             background-repeat: no-repeat;
             background-position: top center;
         }
+    }
+}
+
+.dropdown_menu{
+    position: absolute;
+    top: 2.5em;
+    margin: 0;
+    padding: 0;
+    background: $white;
+    border-radius: 5px;
+    box-shadow: 0px 10px 15px 0px rgba($color: #000000, $alpha: .25);
+}
+
+.sub_menu{
+    padding: 1.5em 3em;
+    border-radius: 5px;
+    transition: all .5s;
+
+    &:hover{
+        background: $accent;
+    }
+
+    &:after{
+        display: none;
     }
 }
