--- a/styles/scss/_about.scss
+++ b/styles/scss/_about.scss
@@ -146,6 +146,7 @@
 
 .design{
     margin: 15em auto;
+    margin-bottom: 5em;
     overflow-x: hidden;
     position: relative;
 
@@ -208,7 +209,7 @@
 
 .tags_grid{ /*l'animation*/
     animation-name: move;
-    animation-duration: 30s;
+    animation-duration: 45s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
 }
@@ -223,8 +224,101 @@
     left: 10rem;
 }
 
-
 /*-----FORMATION-----*/
+
+.formation{
+    background-color: $accent;
+    padding: 5rem 0;
+    h2{
+        color: $white;
+        @include ModeratBold;
+        font-size: 2.25rem;
+        margin: 0;
+    }
+
+    p{
+        color:$white;
+        @include ModeratRegular;
+        font-size: 1.125rem;
+    }
+}
+
+.formations{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-auto-flow: row;
+    grid-gap: 30px;
+}
+
+.school{
+    background-color: $white;
+    height: 250px;
+    border-radius: 5px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+    padding: 2em;
+    box-sizing: border-box;
+    @include ModeratRegular;
+    font-size: 1.125rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    h3{
+        margin: 0;
+        margin-top: 1rem;
+        font-size: 1.5rem;
+    }
+
+    p{
+        color: $black;
+        margin: 0;
+    }
+}
+
+.school_more{
+    margin-top: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.form_emojis{
+    height: 30px;
+    width: max-content;
+}
+
+.school_link{
+    font-size: .875rem;
+    color: $black;
+    text-decoration: none;
+    position: relative;
+    transition: all .5s;
+
+    &:hover::before{
+        content: "";
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        border-bottom: 2px solid $black;
+        bottom: -.5rem;
+    }
+
+    &:after{
+        content: url(/img/icons/external_link.svg);
+        margin-left: .5rem;
+    }
+}
+
+.technobel{
+    grid-column-start: 2;
+
+    .form_emojis{
+        background-image: url(/img/emoji/ok.png), url(/img/emoji/tools.png), url(/img/emoji/yeah.png);
+    }
+}
 
 /*-----CTA-----*/
 .cta{
