about me : check !!!!!!

--- a/styles/style.css
+++ b/styles/style.css
@@ -1291,6 +1291,9 @@ h1 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .form_emojis {
@@ -1330,7 +1333,43 @@ h1 {
 }
 
 .technobel .form_emojis {
+  width: 120px;
   background-image: url(/img/emoji/ok.png), url(/img/emoji/tools.png), url(/img/emoji/yeah.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: left, center, right;
+}
+
+.designinnovation .form_emojis {
+  width: 75px;
+  background-image: url(/img/emoji/tools.png), url(/img/emoji/yeah.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: left, right;
+}
+
+.talentquest .form_emojis {
+  width: 30px;
+  background-image: url(/img/emoji/ok.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.mat .form_emojis {
+  width: 165px;
+  background-image: url(/img/emoji/ok.png), url(/img/emoji/rocket.png), url(/img/emoji/shout.png), url(/img/emoji/yeah.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: left, 33%, 66%, right;
+}
+
+.heaj .form_emojis {
+  width: 30px;
+  background-image: url(/img/emoji/yeah.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 /*-----CTA-----*/
